Update_App_Id_Facebook

--- a/PokDeng/Resources/Info.plist
+++ b/PokDeng/Resources/Info.plist
@@ -48,9 +48,9 @@
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>FacebookAppID</key>
-	<string>255873894561705</string>
+	<string>591890917624212</string>
 	<key>FacebookDisplayName</key>
-	<string>Khronos PokDeng Test 1</string>
+	<string>PokDeang</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIAppFonts</key>
